# RAG-PlayGround

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  TODO.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
bash/: create_opensearch.sh  execute_linters.sh  start_opensearch.sh
conf/: .env  hybrid_search_config.json  index_config.json
images/: LLM-RAG-SYSTEM.excalidraw
notes/: app.md  retrieval.md  vector-database.md
pages/: 1_🤖_Chatbot.py  2_📄_Upload_Documents.py
src/: __init__.py  chat.py  constants.py  embeddings.py  ingestion.py  logging.py  ocr.py  opensearch.py  retrieval.py  utils.py
src/encoders/: __init__.py  embeddings.py  reranker.py
src/ingestion/: __init__.py  loaders.py  splitters.py
src/opensearch/: __init__.py  client.py  indexing.py  retrieval.py
