[project]
name = "RAG-PlayGround"
version = "0.1.0"
description = "This is a RAG PlayGround where one can test different RAG techniques."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.40.0",
    "sentence-transformers==3.1.1",
    "pypdf2==3.0.1",
    "pillow==11.0.0",
    "opensearch-py==2.6.0",
    "torch==2.2.2",
    "requests==2.27.1",
    "ollama==0.3.3",
    "pycryptodome==3.21.0",
    "langchain==0.3.7",
    "langchain-community==0.3.5",
    "langchain-text-splitters==0.3.2",
    "unstructured[all-docs]",
    "ipython==8.29.0",
    "rapidocr-onnxruntime==1.3.25",
    "tiktoken==0.8.0",
    "watchdog==5.0.3",
    "ruff==0.7.3",
    "black==24.10.0",
    "isort==5.13.2",
    "mypy==1.13.0",
    "python-dotenv>=1.0.1",
]

[tool.black]
line-length = 88  

[tool.isort]
profile = "black"  
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
